2월 25일 로컬 명령어

--- a/history review/로컬)2월 25일 목요일.md
+++ b/history review/로컬)2월 25일 목요일.md
@@ -39,7 +39,7 @@
    39  ps -ef | grep mysql
    40  sudo -i    >> opc에서 sudo를 문두에 이용하지 않아도 되서 편리한 명령어다
    41  whoami
-   42  df -h    
+   42  df -h    >>Disk Free"의 약어로서 현재 사용중인 파일시스템의 전체크기, 사용중인 크기, 사용가능한 크기, 사용율, 마운트정보등을 보여준다
    43  free -h    >> 메모리 사용 확인 가능
    44  whoami
    45  sudo -i
@@ -55,7 +55,7 @@
    55  mysql -u root -p
    56  telnet 193.123.251.126 3306
    57  telnet 193.123.251.126 80
-   58  sudo iptables -I INPUT 5 -i ens3 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
+   58  sudo iptables -I INPUT 5 -i ens3 -p tcp --dport 80 -m state --state NEW, ESTABLISHED -j ACCEPT   >> 텔넷이 연결 되지 않을 때 사용
    59  telnet 193.123.251.126 80
    60  sudo iptables -I INPUT 5 -i ens3 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
    61  sudo iptables -I INPUT 5 -i ens3 -p tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
